dynamic_routing/api/envoy.yaml
node:
  id: '1'
  cluster: service
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - name: http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: services
              domains:
              - '*'
              routes:
              - match:
                  prefix: '/'
                route:
                  cluster: service
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: service
    type: EDS
    connect_timeout: 0.25s
    eds_cluster_config:
      service_name: service
      eds_config:
        api_config_source:
          api_type: REST
          cluster_names:
          - service2
          refresh_delay: 5s
  - name: service2
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.18.0.4
                port_value: 8090
